--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
