--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.3"
-    }
+    },
+    "dependencies": {}
 }
