--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,14 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "alexpechkarev/google-maps": "^9.0",
         "barryvdh/laravel-debugbar": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
